chore: commit local production hardening changes before PR merge